--- a/src/Component/Login/Login.css
+++ b/src/Component/Login/Login.css
@@ -4,7 +4,7 @@
 .div2{
     margin: 5px;
     background: aliceblue;
-    padding: 20px;
+    /* padding: 20px; */
 }
 .label1{
     font-size: 20px;
@@ -23,3 +23,4 @@
     width: 9%;
     color: azure;
 }
+
